src/test/resources/templates/valid/shadowing.kool
object Program {
  def main () : Unit = {
    if(new Main().run()) println("");
  }
}

class Main {
	Def run(): Bool = {
		var a: A<Int>;
		a = new A<Int>();
		println(a.exec(5));
		return false;
	}
}

class A<B> {
	var value: B;

	Def exec(b: B): B = {
		return b;
	}
}

class B {
	Def foo(): Int = {
		return 1;
	}
}
