src/test/resources/templates/invalid/no-such-method.kool
object Program4 {
  def/**/main () : Unit = {
    println(new Test<A>());
    println(new Test<B>());
  }
}

class A {
	Def exec(): Int = {
		return 5;
	}
}

class B {
	Def dontHaveExec(): Int = {
		return 5;
	}
}

class Test<T> {
	var t: T;

	Def test(): Int = {
		t = new T();
		return t.exec();
	}
}

    